--- a/PunchBot/App.config
+++ b/PunchBot/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PunchBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <PunchBot.Properties.Settings>
+            <setting name="Com" serializeAs="String">
+                <value>COM3</value>
+            </setting>
+            <setting name="Baud" serializeAs="String">
+                <value>9600</value>
+            </setting>
+        </PunchBot.Properties.Settings>
+    </userSettings>
 </configuration>
