--- a/Capture/Properties/Settings.settings
+++ b/Capture/Properties/Settings.settings
@@ -1,9 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PunchBot.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Capture.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Com" Type="System.String" Scope="User">
-      <Value Profile="(Default)">COM3</Value>
+      <Value Profile="(Default)">COM4</Value>
     </Setting>
     <Setting Name="Baud" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">9600</Value>
