--- a/PunchBot/PunchBot.csproj
+++ b/PunchBot/PunchBot.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Calculator.cs" />
     <Compile Include="Data.cs" />
+    <Compile Include="Extensions\MyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings1.Designer.cs">
       <AutoGen>True</AutoGen>
