--- a/PunchBot/Settings1.settings
+++ b/PunchBot/Settings1.settings
@@ -3,7 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="PulsesPerRevolution" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1024</Value>
+      <Value Profile="(Default)">10000</Value>
+    </Setting>
+    <Setting Name="SampleSizeForAverage" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">8</Value>
     </Setting>
   </Settings>
 </SettingsFile>
