--- a/PunchBot/app.config
+++ b/PunchBot/app.config
@@ -8,7 +8,10 @@
     <userSettings>
         <PunchBot.Settings1>
             <setting name="PulsesPerRevolution" serializeAs="String">
-                <value>1024</value>
+                <value>10000</value>
+            </setting>
+            <setting name="SampleSizeForAverage" serializeAs="String">
+                <value>8</value>
             </setting>
         </PunchBot.Settings1>
     </userSettings>
