--- a/Web/Config/Dashboard.config
+++ b/Web/Config/Dashboard.config
@@ -37,7 +37,9 @@
         views/dashboard/developer/examinemanagement.html
       </control>
     </tab>
-  </section>
+  <tab caption="uSync Dashboard">
+          <control>/Umbraco/Plugins/usync/uSyncUi.ascx</control>
+        </tab></section>
 
   <section alias="StartupMediaDashboardSection">
     <areas>
