--- a/Web/Config/uSyncSettings.config
+++ b/Web/Config/uSyncSettings.config
@@ -5,8 +5,8 @@
   </configSections>
 
   <usync 
-    read="true" 
-    write="false"
+    read="false" 
+    write="true"
     attach="true" 
     folder="~/uSync/" 
     archive="~/uSync.Archive" 
