add basic strike view

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -57,7 +57,7 @@
     <remove name="umbracoDbDSN" />
     <add name="local" connectionString="" providerName="" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
-    <add name="umbracoDbDSN" connectionString="Server=tcp:bcoajnle1i.database.windows.net,1433;Database=umbraco1;User ID=pb_admin@bcoajnle1i;Password=5literhoX" providerName="System.Data.SqlClient" />
+    <add name="umbracoDbDSN" connectionString="Server=tcp:bcoajnle1i.database.windows.net,1433;Database=umbraco1;User ID=pb_admin@bcoajnle1i;Password=Redcar1980" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.data>
@@ -78,7 +78,7 @@
   </system.net>
 
   <system.web>
-    <customErrors mode="On" />
+    <customErrors mode="Off" />
     <trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true" />
     <httpRuntime requestValidationMode="2.0" enableVersionHeader="false" targetFramework="4.5" />
     <!--
