--- a/Web/uSync/DocumentType/Home/def.config
+++ b/Web/uSync/DocumentType/Home/def.config
@@ -17,6 +17,7 @@
   </Info>
   <Structure>
     <DocumentType>LandingPage</DocumentType>
+    <DocumentType>Strikes</DocumentType>
   </Structure>
   <GenericProperties>
     <GenericProperty>
@@ -27,7 +28,7 @@
       <Tab>Site</Tab>
       <Mandatory>False</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[]]></Description>
+      <Description><![CDATA[d1]]></Description>
       <SortOrder>0</SortOrder>
     </GenericProperty>
     <GenericProperty>
@@ -38,7 +39,7 @@
       <Tab>Site</Tab>
       <Mandatory>False</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[]]></Description>
+      <Description><![CDATA[d3]]></Description>
       <SortOrder>1</SortOrder>
     </GenericProperty>
     <GenericProperty>
@@ -49,7 +50,7 @@
       <Tab>Site</Tab>
       <Mandatory>False</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[]]></Description>
+      <Description><![CDATA[d2]]></Description>
       <SortOrder>2</SortOrder>
     </GenericProperty>
     <GenericProperty>
@@ -60,8 +61,19 @@
       <Tab>Content</Tab>
       <Mandatory>False</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[]]></Description>
+      <Description><![CDATA[MONKEY!!]]></Description>
       <SortOrder>0</SortOrder>
+    </GenericProperty>
+    <GenericProperty>
+      <Name>Image Cropper</Name>
+      <Alias>imageCropper</Alias>
+      <Type>Umbraco.ImageCropper</Type>
+      <Definition>1df9f033-e6d4-451f-b8d2-e0cbc50a836f</Definition>
+      <Tab>Content</Tab>
+      <Mandatory>False</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
     </GenericProperty>
   </GenericProperties>
   <Tabs>
