--- a/Web/uSync/DataTypeDefinition/List View - Content.config
+++ b/Web/uSync/DataTypeDefinition/List View - Content.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <DataType Name="List View - Content" Id="Umbraco.ListView" Definition="c0808dd3-8133-4e4b-8ce8-e2bea84a96a4" DatabaseType="Nvarchar">
-  <PreValues />
+  <PreValues>
+    <PreValue Id="23" Value="10" Alias="pageSize" SortOrder="0" />
+    <PreValue Id="24" Value="CreateDate" Alias="orderBy" SortOrder="1" />
+    <PreValue Id="25" Value="asc" Alias="orderDirection" SortOrder="2" />
+    <PreValue Id="26" Value="[&#xD;&#xA;  {&#xD;&#xA;    &quot;alias&quot;: &quot;sortOrder&quot;,&#xD;&#xA;    &quot;header&quot;: &quot;Sort order&quot;,&#xD;&#xA;    &quot;isSystem&quot;: 1&#xD;&#xA;  },&#xD;&#xA;  {&#xD;&#xA;    &quot;alias&quot;: &quot;updateDate&quot;,&#xD;&#xA;    &quot;header&quot;: &quot;Last edited&quot;,&#xD;&#xA;    &quot;isSystem&quot;: 1&#xD;&#xA;  },&#xD;&#xA;  {&#xD;&#xA;    &quot;alias&quot;: &quot;member&quot;,&#xD;&#xA;    &quot;isSystem&quot;: 0,&#xD;&#xA;    &quot;header&quot;: &quot;Member&quot;&#xD;&#xA;  }&#xD;&#xA;]" Alias="includeProperties" SortOrder="3" />
+  </PreValues>
 </DataType>
